force-app/main/default/objects/MeetingsUserSettings__c/MeetingsUserSettings__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>Meetings User Settings</label>
</CustomObject>