force-app/main/default/objects/MeetingsUserSettings__c/fields/CreateNewLeads__c.field-meta.xml
<CustomField>
    <fullName>CreateNewLeads__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Create New Leads</label>
    <type>Checkbox</type>
</CustomField>