force-app/main/default/objects/MeetingsUserSettings__c/fields/DisplayDeletedQuestions__c.field-meta.xml
<CustomField>
    <fullName>DisplayDeletedQuestions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Display Deleted Questions</label>
    <type>Checkbox</type>
</CustomField>