force-app/main/default/objects/MeetingsUserSettings__c/fields/LeadOwnerId__c.field-meta.xml
<CustomField>
    <fullName>LeadOwnerId__c</fullName>
    <label>Lead Owner Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>