force-app/main/default/objects/MeetingsUserSettings__c/fields/NewMeetingDefaultName__c.field-meta.xml
<CustomField>
    <fullName>NewMeetingDefaultName__c</fullName>
    <label>NewMeetingDefaultName</label>
    <type>TextArea</type>
</CustomField>