force-app/main/default/objects/MeetingsUserSettings__c/fields/NewMeetingTimeZone__c.field-meta.xml
<CustomField>
    <fullName>NewMeetingTimeZone__c</fullName>
    <label>NewMeetingTimeZone</label>
    <type>TextArea</type>
</CustomField>