force-app/main/default/objects/MeetingsUserSettings__c/fields/TollFreeNumber__c.field-meta.xml
<CustomField>
    <fullName>TollFreeNumber__c</fullName>
    <label>Toll Free Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>